--- a/app/styles/mvp.css
+++ b/app/styles/mvp.css
@@ -2,10 +2,10 @@
 
 @layer utilities {
 	.MVP-section {
-		@apply bg-[#003d23]  p-20 flex flex-col items-center max-w-[1800px] mx-auto;
+		@apply bg-[#003d23] p-20 flex flex-col items-center max-w-[1800px] mx-auto;
 	}
 	.mvp-card {
-		@apply flex  justify-between text-2xl gap-16 text-[#e6e6e6] min-h-screen flex-col-reverse lg:flex-row;
+		@apply flex  justify-between text-2xl gap-16 text-[#e6e6e6] flex-col-reverse lg:flex-row;
 	}
 	.mvp-card .text-section {
 		@apply flex flex-col justify-between gap-4 md:mt-20;
